# noku-ml

./: .cruft.json  .gitattributes  .gitignore  .pre-commit-config.yaml  LICENSE  LICENSE.md  LICENSE.ml  README.md  README_NO.md  SECURITY.md  SSB-PROJECT-INSTRUKSJONER.md  poetry.toml  pyproject.toml
src/extra/fun/: Happy Fun Times.ipynb  README_Banneord.md  README_Banneord_NO.md  banneord.py  imports.py
src/extra/nni tester/: NNI Master.ipynb  NNI_README.md  NNI_README_NO  NNI_README_NO.md  imports.py  nni.py
src/functions/: ao.py  create_datafiles.py  dash_application.py  fizzbuzz.py  input_data.py  knn.py  kommune.py  kommune_inntekt.py  kommune_pop.py  kommune_translate.py  kpi.py  ml_modeller.py  oppdateringsfil.py  test.ipynb  time.py  viktige_lister.py  visualisations.py
src/notebooks/: 00_imports.ipynb  AO.ipynb  File Transfers.ipynb  Klargjøring.ipynb  ML function builder.ipynb  Master.ipynb  README.md  Viktige Lister.ipynb  dynarev.ipynb  geocoding.ipynb  imports.py  klargjøring.ipynb  mae_results.ipynb  plan.py
tests/: __init__.py  test_fizzbuzz.py
