[tool.poetry]
name = "noku-ml"
version = "0.1.0"
description = ""
authors = ["Joel Parr <jpa@ssb.no>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
dapla-toolbelt = ">=1.3.2"
scikit-learn = "^1.5.0"
openpyxl = "^3.1.2"
graphviz = "^0.20.1"
xgboost = "^2.0.3"
numpy = "^1.26.4"
shap = "^0.45.1"
tensorflow = "^2.16.1"
scikeras = "^0.13.0"
pyreadr = "^0.5.0"
fastavro = "^1.9.4"
imbalanced-learn = "^0.12.3"
pyjstat = "^2.4.0"
ssb-sgis = "^1.0.3"
ipywidgets = "^8.1.3"
nbformat = "^5.10.4" 
jupyter = "^1.0.0"
matplotlib = "^3.9.1"
seaborn = "^0.13.2"
plotly = "^5.22.0"
bokeh = "^3.5.0"
dash = "^2.17.1"
holoviews = "^1.19.1"
dash-bootstrap-components = "^1.6.0"
dash-leaflet = "^1.0.15"
pyarrow = "14.0.2"
polars = "^1.14.0"

[tool.poetry.group.dev.dependencies]
pytest = ">=7.1.3"
ipykernel = ">=6.15.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
